[package]
name = "ledger-prompts-ui"
version = "0.1.0"
edition = "2018"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
ledger_device_sdk = "1.4.3"
ledger-log = { git = "https://github.com/alamgu/ledger-log.git" }
include_gif = "1.0.1"

[features]
speculos = ["ledger_device_sdk/speculos"]
